--- a/RazorViews/Views/Shared/_CityList.cshtml
+++ b/RazorViews/Views/Shared/_CityList.cshtml
@@ -1,10 +1,17 @@
-<div class="list-container">
-    <h2>Cities</h2>
-    <div class="box">
-        <ul class="list">
-            <li>Hyderabad</li>
-            <li>Vijayawada</li>
-            <li>Nellore</li>
-        </ul>
+<div class="container box">
+    <h3>@ViewBag.Title</h3>
+    <div class="list-container">
+        <h3>Cities</h3>
+        <div>
+            <ul class="list">
+                <li>Hyderabad</li>
+                <li>Vijayawada</li>
+                <li>Nellore</li>
+            </ul>
+        </div>
     </div>
+    @{
+        ViewData["Title"] = "Title Set in Partial View";
+    }
+    <h3>@ViewBag.Title</h3>
 </div>
