--- a/RazorViews/Views/Shared/_Layout.cshtml
+++ b/RazorViews/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-<head>
-    <link href="~/Stylesheet.css" rel="Stylesheet"/>
-</head>
+<link href="~/StyleSheet.css" rel="stylesheet"/>
 <h1>Weather App</h1>
 
 <div>@RenderBody()</div>
