--- a/RazorViews/Views/_ViewImports.cshtml
+++ b/RazorViews/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
-@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, RazorViews
 @using RazorViews.Models
+@using RazorViews.ViewComponents
