--- a/RazorViews/Views/Articles/Index.cshtml
+++ b/RazorViews/Views/Articles/Index.cshtml
@@ -1,3 +1,11 @@
+@using RazorViews.Interfaces
+
+@inject IArticlesService articlesServiceInView;
+
+@{
+    var articles = articlesServiceInView.GetTopArticles(2);
+}
+
 <h2>Articles View</h2>
 
 @await Component.InvokeAsync("TopArticles", new { count = 2})
@@ -13,4 +21,4 @@
         const response = await fetch('articles/load-articles');
         document.querySelector('#articles-list').innerHTML = await response.text();
     });
-</script>
+</script>    using RazorViews.Interfaces;
